--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.0
 coreapi==2.3.3
 coreschema==0.0.4
 Django==5.1.1
+django-cors-headers==4.6.0
 django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.15.2
@@ -17,6 +18,7 @@ MarkupSafe==3.0.2
 openapi-codec==1.3.2
 packaging==24.1
 PyJWT==2.9.0
+python-decouple==3.8
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
@@ -24,5 +26,3 @@ simplejson==3.19.3
 sqlparse==0.5.1
 uritemplate==4.1.1
 urllib3==2.2.3
-gunicorn
-
